<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthActivity"
    android:background="@drawable/back_first"
    android:textColor="@color/colorPrimary">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:fontFamily="@font/vdud"
        android:text="@string/tittle"
        android:textColor="@color/colorPrimary"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/ET_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:hint="@string/email"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/ET_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ET_email"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="qwerty12345"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/RG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ET_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/RB_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/vdud"
            android:text="@string/prepod"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/RB_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/RG"
            android:layout_weight="1"
            android:fontFamily="@font/vdud"
            android:text="@string/student"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        >

        <Button
            android:id="@+id/BTN_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_sign_in"
            android:baselineAligned="false"
            android:fontFamily="@font/vdud"
            android:layout_marginRight="2dp"
            android:text="@string/signing"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/BTN_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_sign_in"
            android:fontFamily="@font/vdud"
            android:layout_marginLeft="2dp"
            android:text="@string/registration"
            android:textSize="20sp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        app:srcCompat="@drawable/lock" />

    <include
        android:id="@+id/authProgressBar"
        android:visibility="gone"
        layout="@layout/auth_progress_dialog"/>

</RelativeLayout>
